@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.datadoghq</groupId>
         <artifactId>dd-trace-java</artifactId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>dd-java-agent</artifactId>
@@ -15,25 +15,30 @@
 
 
     <properties>
+        <!-- Datadog versions -->
+        <dd-trace.version>0.0.3-SNAPSHOT</dd-trace.version>
+        <!-- Opentracing versions -->
+        <opentracing.version>0.22.0</opentracing.version>
         <ot.agent.version>0.0.12</ot.agent.version>
         <ot.contrib.webservlet.version>0.0.8</ot.contrib.webservlet.version>
         <ot.contrib.mongo.version>0.0.1</ot.contrib.mongo.version>
         <ot.contrib.okhttp.version>0.0.4</ot.contrib.okhttp.version>
-        <opentracing.version>0.22.0</opentracing.version>
-        <java.version>1.8</java.version>
-        <ot.dd-trace.version>0.0.2-SNAPSHOT</ot.dd-trace.version>
+        <ot.contrib.jdbc.version>0.0.1</ot.contrib.jdbc.version>
+        <ot.contrib.aws.version>0.0.1</ot.contrib.aws.version>
+        <ot.contrib.httpclient.version>0.0.1</ot.contrib.httpclient.version>
+        <!-- Others versions -->
+        <java.version>1.7</java.version>
     </properties>
 
     <dependencies>
-
-        <!-- DD tracer CORE -->
+        <!-- DD tracer deps-->
         <dependency>
             <groupId>com.datadoghq</groupId>
             <artifactId>dd-trace</artifactId>
-            <version>${ot.dd-trace.version}</version>
+            <version>${dd-trace.version}</version>
         </dependency>
 
-        <!-- opentracing agent -->
+        <!-- Opentracing agent -->
         <dependency>
             <groupId>io.opentracing.contrib</groupId>
             <artifactId>opentracing-agent</artifactId>
@@ -63,6 +68,8 @@
             <artifactId>opentracing-web-servlet-filter</artifactId>
             <version>${ot.contrib.webservlet.version}</version>
         </dependency>
+
+        <!-- Mongo instrumentation -->
         <dependency>
             <groupId>io.opentracing.contrib</groupId>
             <artifactId>opentracing-mongo-driver</artifactId>
@@ -78,11 +85,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
         <!-- Opentracing JDBC contribution -->
         <dependency>
             <groupId>io.opentracing.contrib</groupId>
             <artifactId>opentracing-jdbc</artifactId>
-            <version>0.0.1</version>
+            <version>${ot.contrib.jdbc.version}</version>
         </dependency>
 
         <!-- Client side instrumentation -->
@@ -102,7 +110,7 @@
         <dependency>
             <groupId>io.opentracing.contrib</groupId>
             <artifactId>opentracing-aws-sdk</artifactId>
-            <version>0.0.1</version>
+            <version>${ot.contrib.aws.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.amazonaws</groupId>
@@ -115,132 +123,20 @@
         <dependency>
             <groupId>io.opentracing.contrib</groupId>
             <artifactId>opentracing-apache-httpclient</artifactId>
-            <version>0.0.1</version>
+            <version>${ot.contrib.httpclient.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.httpcomponents</groupId>
                     <artifactId>httpclient</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
-
-        <!-- ES instrumentation -->
-        <dependency>
-            <groupId>io.opentracing.contrib</groupId>
-            <artifactId>opentracing-elasticsearch-client</artifactId>
-            <version>0.0.1</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.apache.logging.log4j</groupId>
-                    <artifactId>log4j-core</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.elasticsearch.client</groupId>
-                    <artifactId>transport</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.logging.log4j</groupId>
-                    <artifactId>log4j-api</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <!-- JUnit tests -->
-        <dependency>
-            <groupId>io.opentracing</groupId>
-            <artifactId>opentracing-mock</artifactId>
-            <version>${opentracing.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <version>3.6.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>2.7.22</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- Mongo tests -->
-        <dependency>
-            <groupId>org.mongodb</groupId>
-            <artifactId>mongo-java-driver</artifactId>
-            <version>3.4.2</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- Jetty Servlet tests -->
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-server</artifactId>
-            <version>9.4.1.v20170120</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-servlet</artifactId>
-            <version>9.4.1.v20170120</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- Tomcat Servlet tests -->
-        <dependency>
-            <groupId>org.apache.tomcat.embed</groupId>
-            <artifactId>tomcat-embed-core</artifactId>
-            <version>8.0.41</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.tomcat.embed</groupId>
-            <artifactId>tomcat-embed-jasper</artifactId>
-            <version>8.0.41</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- AWS SDK tests -->
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk</artifactId>
-            <version>1.11.132</version>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.apache.httpcomponents</groupId>
-                    <artifactId>httpclient</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <!-- OkHTTP tests -->
-        <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>3.6.0</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- Apache HTTP client tests -->
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.5.3</version>
-            <scope>test</scope>
         </dependency>
 
     </dependencies>
     <build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
+            <!-- Override the default settings -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -248,36 +144,6 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.4</version>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20</version>
-                <configuration>
-                    <skipTests>true</skipTests>
-                    <includes>
-                        <include>*Test.java</include>
-                    </includes>
-                    <forkCount>3</forkCount>
-                    <reuseForks>false</reuseForks>
-                    <argLine>-Xmx1g -Xms1g -XX:MaxPermSize=512m -Dorg.jboss.byteman.verbose=true
-                        -javaagent:${M2_REPO}/com/datadoghq/dd-java-agent/${project.version}/dd-java-agent-${project.version}.jar
-                    </argLine>
-                    <workingDirectory>target/FORK_DIRECTORY_${surefire.forkNumber}</workingDirectory>
                 </configuration>
             </plugin>
             <plugin>
@@ -291,12 +157,6 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <artifactSet>
-                                <excludes>
-                                    <!-- <exclude>ch.qos.logback:*</exclude> -->
-                                    <!-- <exclude>org.slf4j:*</exclude> -->
-                                </excludes>
-                            </artifactSet>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                     <resource>otarules.btm</resource>
